2013-10-28 Alex Koutsman <koutsman@cern.ch>
	U    scripts/YieldsTable.py
	U    scripts/YieldsTableTex.py
	U    scripts/SysTable.py
	* update YieldsTableTex.py to deal with sample with "_" in the name
	* change modus for YieldsTable.py and SysTable.py to +x

2013-10-30 Max Baak <mbaak@cenn.ch>
	M       src/Utils.cxx
	* Fix compilation warnings
	M       src/ConfigMgr.cxx
	* reset initial values before doing upperlimit
	M 	setup.sh
	* root v5.34.10

2013-10-28 Alex Koutsman <koutsman@cern.ch>
	U    scripts/YieldsTable.py
	U    scripts/YieldsTableTex.py
	* Fixed a bug in YieldsTable.py, when you run with -S option: show the 
	* sum of all regions. This option is off though by default, and we
	* believe noone has been affected. (The summed numbers are so clearly
	* off that we should've heard something if someone was.)
	* Tagging HistFitter-00-00-33

2013-10-28 Max Baak <mbaak@cern.ch>
	M       src/HypoTestTool.cxx
	* Initial fit of hypotest done with Minuit2
	M 	src/Utils.cxx
	* Fix to function that resets nominal global measurements for mc stat errors.
	M       setup.sh
	* Migration to slc 6
	A       setup5.sh
	* Setup file for slc5
	* Tagging HistFitter-00-00-32

2013-10-10 David Cote <david.cote@cern.ch>
	-major clean-up of SysTable.py
	  * removed un-used method 2 with its arguments
	  * moved namemap from core to an optional end-user config file
	    with an exmaple in python/MySystTableConfig.py
	    --> usable as: SysTable.py <options> MySystTableConfig.py
	-added new the possibility to merge samples, with syntax:
	    --> SysTable.py -s '[topZ,topW,ttbarHiggs,singleTopZ],[diBosonWZ,diBosonPowhegZZ,triBoson],fakes'
	    --> YieldsTable.py -s '[topZ,topW,ttbarHiggs,singleTopZ],[diBosonWZ,diBosonPowhegZZ,triBoson],fakes'
	-added the possibility to merge systematics after fit, using namemap object, with syntax:
	    --> SysTable.py <options> MySystTableConfig.py
	-added -t argument to YieldsTable.py to set the latex table name